--- a/cui/uiconfig/ui/diagramdialog.ui
+++ b/cui/uiconfig/ui/diagramdialog.ui
@@ -53,9 +53,14 @@
           </packing>
         </child>
         <child>
-          <object class="GtkTextView" id="textDiagram">
+          <object class="GtkTreeView" id="treeDiagram">
             <property name="visible">True</property>
             <property name="can_focus">True</property>
+            <property name="headers_visible">False</property>
+            <property name="show_expanders">True</property>
+            <child internal-child="selection">
+              <object class="GtkTreeSelection"/>
+            </child>
           </object>
           <packing>
             <property name="expand">True</property>
