xmloff: create XMLImpressExportOOO instances with an uno constructor
See tdf#74608 for motivation.

Change-Id: I44c3ac24c19f4ecd1d0d01a9a686b486f3b35c48
Reviewed-on: https://gerrit.libreoffice.org/78236
Tested-by: Jenkins
Reviewed-by: Miklos Vajna <vmiklos@collabora.com>

--- a/xmloff/util/xo.component
+++ b/xmloff/util/xo.component
@@ -108,7 +108,8 @@
     constructor="com_sun_star_comp_Impress_XMLOasisContentImporter_get_implementation">
     <service name="com.sun.star.comp.Impress.XMLOasisContentImporter"/>
   </implementation>
-  <implementation name="XMLImpressExportOOO">
+  <implementation name="XMLImpressExportOOO"
+    constructor="com_sun_star_comp_Impress_XMLExporter_get_implementation">
     <service name="com.sun.star.comp.Impress.XMLExporter"/>
   </implementation>
   <implementation name="XMLImpressExportOasis"
