--- a/extensions/uiconfig/sabpilot/ui/datasourcepage.ui
+++ b/extensions/uiconfig/sabpilot/ui/datasourcepage.ui
@@ -1,8 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<!-- Generated with glade 3.16.1 -->
+<!-- Generated with glade 3.22.1 -->
 <interface domain="pcr">
   <requires lib="gtk+" version="3.18"/>
-  <requires lib="LibreOffice" version="1.0"/>
   <object class="GtkGrid" id="DataSourcePage">
     <property name="visible">True</property>
     <property name="can_focus">False</property>
@@ -12,22 +11,23 @@
       <object class="GtkLabel" id="label2">
         <property name="visible">True</property>
         <property name="can_focus">False</property>
-        <property name="xalign">0</property>
-        <property name="yalign">0</property>
         <property name="label" translatable="yes" context="datasourcepage|label2">That was all the information necessary to integrate your address data into %PRODUCTNAME.
 
 Now, just enter the name under which you want to register the data source in %PRODUCTNAME.</property>
         <property name="wrap">True</property>
-        <property name="max_width_chars">90</property>
-        <accessibility>
-          <role type="static"/>
-        </accessibility>
+        <property name="width_chars">70</property>
+        <property name="max_width_chars">70</property>
+        <property name="xalign">0</property>
+        <property name="yalign">0</property>
+        <child internal-child="accessible">
+          <object class="AtkObject" id="label2-atkobject">
+            <property name="AtkObject::accessible-role" translatable="no">static</property>
+          </object>
+        </child>
       </object>
       <packing>
         <property name="left_attach">0</property>
         <property name="top_attach">0</property>
-        <property name="width">1</property>
-        <property name="height">1</property>
       </packing>
     </child>
     <child>
@@ -61,16 +61,14 @@ Now, just enter the name under which you want to register the data source in %PR
               <object class="GtkLabel" id="locationft">
                 <property name="visible">True</property>
                 <property name="can_focus">False</property>
-                <property name="xalign">0</property>
                 <property name="label" translatable="yes" context="datasourcepage|locationft">Location</property>
                 <property name="use_underline">True</property>
                 <property name="mnemonic_widget">location</property>
+                <property name="xalign">0</property>
               </object>
               <packing>
                 <property name="left_attach">0</property>
                 <property name="top_attach">0</property>
-                <property name="width">1</property>
-                <property name="height">1</property>
               </packing>
             </child>
             <child>
@@ -84,12 +82,10 @@ Now, just enter the name under which you want to register the data source in %PR
               <packing>
                 <property name="left_attach">2</property>
                 <property name="top_attach">0</property>
-                <property name="width">1</property>
-                <property name="height">1</property>
               </packing>
             </child>
             <child>
-              <object class="svtlo-OFileURLControl" id="location">
+              <object class="GtkComboBoxText" id="location">
                 <property name="visible">True</property>
                 <property name="can_focus">False</property>
                 <property name="hexpand">True</property>
@@ -97,22 +93,19 @@ Now, just enter the name under which you want to register the data source in %PR
                 <child internal-child="entry">
                   <object class="GtkEntry" id="comboboxtext-entry">
                     <property name="can_focus">True</property>
+                    <property name="activates_default">True</property>
                   </object>
                 </child>
               </object>
               <packing>
                 <property name="left_attach">1</property>
                 <property name="top_attach">0</property>
-                <property name="width">1</property>
-                <property name="height">1</property>
               </packing>
             </child>
           </object>
           <packing>
             <property name="left_attach">0</property>
             <property name="top_attach">1</property>
-            <property name="width">1</property>
-            <property name="height">1</property>
           </packing>
         </child>
         <child>
@@ -128,8 +121,6 @@ Now, just enter the name under which you want to register the data source in %PR
           <packing>
             <property name="left_attach">0</property>
             <property name="top_attach">2</property>
-            <property name="width">1</property>
-            <property name="height">1</property>
           </packing>
         </child>
         <child>
@@ -154,16 +145,14 @@ Now, just enter the name under which you want to register the data source in %PR
                       <object class="GtkLabel" id="nameft">
                         <property name="visible">True</property>
                         <property name="can_focus">False</property>
-                        <property name="xalign">0</property>
                         <property name="label" translatable="yes" context="datasourcepage|nameft">Address book name</property>
                         <property name="use_underline">True</property>
                         <property name="mnemonic_widget">name</property>
+                        <property name="xalign">0</property>
                       </object>
                       <packing>
                         <property name="left_attach">0</property>
                         <property name="top_attach">0</property>
-                        <property name="width">1</property>
-                        <property name="height">1</property>
                       </packing>
                     </child>
                     <child>
@@ -171,40 +160,38 @@ Now, just enter the name under which you want to register the data source in %PR
                         <property name="visible">True</property>
                         <property name="can_focus">True</property>
                         <property name="hexpand">True</property>
+                        <property name="activates_default">True</property>
                       </object>
                       <packing>
                         <property name="left_attach">1</property>
                         <property name="top_attach">0</property>
-                        <property name="width">1</property>
-                        <property name="height">1</property>
                       </packing>
                     </child>
                   </object>
                   <packing>
                     <property name="left_attach">0</property>
                     <property name="top_attach">0</property>
-                    <property name="width">1</property>
-                    <property name="height">1</property>
                   </packing>
                 </child>
                 <child>
                   <object class="GtkLabel" id="warning">
                     <property name="can_focus">False</property>
                     <property name="no_show_all">True</property>
-                    <property name="xalign">0</property>
-                    <property name="yalign">0</property>
                     <property name="label" translatable="yes" context="datasourcepage|warning">Another data source already has this name. As data sources have to have globally unique names, you need to choose another one.</property>
                     <property name="wrap">True</property>
-                    <property name="max_width_chars">90</property>
-                    <accessibility>
-                      <role type="static"/>
-                    </accessibility>
+                    <property name="width_chars">70</property>
+                    <property name="max_width_chars">70</property>
+                    <property name="xalign">0</property>
+                    <property name="yalign">0</property>
+                    <child internal-child="accessible">
+                      <object class="AtkObject" id="warning-atkobject">
+                        <property name="AtkObject::accessible-role" translatable="no">static</property>
+                      </object>
+                    </child>
                   </object>
                   <packing>
                     <property name="left_attach">0</property>
                     <property name="top_attach">1</property>
-                    <property name="width">1</property>
-                    <property name="height">1</property>
                   </packing>
                 </child>
               </object>
@@ -213,16 +200,12 @@ Now, just enter the name under which you want to register the data source in %PR
           <packing>
             <property name="left_attach">0</property>
             <property name="top_attach">3</property>
-            <property name="width">1</property>
-            <property name="height">1</property>
           </packing>
         </child>
       </object>
       <packing>
         <property name="left_attach">0</property>
         <property name="top_attach">1</property>
-        <property name="width">1</property>
-        <property name="height">1</property>
       </packing>
     </child>
   </object>
