xmloff: create XMLDrawContentExportOOO instances with an uno constructor
See tdf#74608 for motivation.

Change-Id: Ib63744f720a886cd67b4158399e6bf91c6efb128
Reviewed-on: https://gerrit.libreoffice.org/79660
Tested-by: Jenkins
Reviewed-by: Miklos Vajna <vmiklos@collabora.com>

--- a/xmloff/util/xo.component
+++ b/xmloff/util/xo.component
@@ -52,7 +52,8 @@
   <implementation name="SchXMLImport.Styles">
     <service name="com.sun.star.comp.Chart.XMLOasisStylesImporter"/>
   </implementation>
-  <implementation name="XMLDrawContentExportOOO">
+  <implementation name="XMLDrawContentExportOOO"
+    constructor="com_sun_star_comp_Draw_XMLContentExporter_get_implementation">
     <service name="com.sun.star.comp.Draw.XMLContentExporter"/>
   </implementation>
   <implementation name="XMLDrawContentExportOasis">
