add activates_default to GtkEntries in dialogs
activates-default of True means pressing return activates the default
button of the action area, which is typically what vcl Edit did by
default.

Change-Id: I60bc1634b04a486af86526d887d0ada961b08076
Reviewed-on: https://gerrit.libreoffice.org/79860
Tested-by: Jenkins
Reviewed-by: Caolán McNamara <caolanm@redhat.com>
Tested-by: Caolán McNamara <caolanm@redhat.com>

--- a/basctl/uiconfig/basicide/ui/basicmacrodialog.ui
+++ b/basctl/uiconfig/basicide/ui/basicmacrodialog.ui
@@ -301,6 +301,7 @@
                             <property name="visible">True</property>
                             <property name="can_focus">True</property>
                             <property name="hexpand">True</property>
+                            <property name="activates_default">True</property>
                           </object>
                         </child>
                       </object>
