--- a/sc/uiconfig/scalc/ui/pivottablelayoutdialog.ui
+++ b/sc/uiconfig/scalc/ui/pivottablelayoutdialog.ui
@@ -179,12 +179,12 @@
                               <object class="GtkTreeView" id="listbox-column">
                                 <property name="visible">True</property>
                                 <property name="can_focus">True</property>
-                                <property name="reorderable">True</property>
                                 <property name="hexpand">True</property>
                                 <property name="vexpand">True</property>
                                 <property name="model">liststore3</property>
                                 <property name="headers_visible">False</property>
                                 <property name="headers_clickable">False</property>
+                                <property name="reorderable">True</property>
                                 <property name="search_column">0</property>
                                 <property name="show_expanders">False</property>
                                 <child internal-child="selection">
@@ -245,9 +245,9 @@
                         </child>
                         <child>
                           <object class="GtkScrolledWindow">
-                            <property name="visible">True</property>
                             <property name="width_request">240</property>
                             <property name="height_request">120</property>
+                            <property name="visible">True</property>
                             <property name="can_focus">True</property>
                             <property name="hexpand">True</property>
                             <property name="vexpand">True</property>
@@ -255,13 +255,13 @@
                             <child>
                               <object class="GtkTreeView" id="listbox-data">
                                 <property name="visible">True</property>
-                                <property name="reorderable">True</property>
                                 <property name="can_focus">True</property>
                                 <property name="hexpand">True</property>
                                 <property name="vexpand">True</property>
                                 <property name="model">liststore4</property>
                                 <property name="headers_visible">False</property>
                                 <property name="headers_clickable">False</property>
+                                <property name="reorderable">True</property>
                                 <property name="search_column">0</property>
                                 <property name="show_expanders">False</property>
                                 <child internal-child="selection">
@@ -322,21 +322,21 @@
                         </child>
                         <child>
                           <object class="GtkScrolledWindow">
-                            <property name="visible">True</property>
                             <property name="width_request">180</property>
                             <property name="height_request">100</property>
+                            <property name="visible">True</property>
                             <property name="can_focus">True</property>
                             <property name="vexpand">True</property>
                             <property name="shadow_type">in</property>
                             <child>
                               <object class="GtkTreeView" id="listbox-row">
                                 <property name="visible">True</property>
-                                <property name="reorderable">True</property>
                                 <property name="can_focus">True</property>
                                 <property name="vexpand">True</property>
                                 <property name="model">liststore5</property>
                                 <property name="headers_visible">False</property>
                                 <property name="headers_clickable">False</property>
+                                <property name="reorderable">True</property>
                                 <property name="search_column">0</property>
                                 <property name="show_expanders">False</property>
                                 <child internal-child="selection">
@@ -397,9 +397,9 @@
                         </child>
                         <child>
                           <object class="GtkScrolledWindow">
-                            <property name="visible">True</property>
                             <property name="width_request">200</property>
                             <property name="height_request">100</property>
+                            <property name="visible">True</property>
                             <property name="can_focus">True</property>
                             <property name="hexpand">True</property>
                             <property name="vexpand">True</property>
@@ -408,12 +408,12 @@
                               <object class="GtkTreeView" id="listbox-page">
                                 <property name="visible">True</property>
                                 <property name="can_focus">True</property>
-                                <property name="reorderable">True</property>
                                 <property name="hexpand">True</property>
                                 <property name="vexpand">True</property>
                                 <property name="model">liststore1</property>
                                 <property name="headers_visible">False</property>
                                 <property name="headers_clickable">False</property>
+                                <property name="reorderable">True</property>
                                 <property name="search_column">0</property>
                                 <property name="show_expanders">False</property>
                                 <child internal-child="selection">
@@ -483,9 +483,9 @@
                     </child>
                     <child>
                       <object class="GtkScrolledWindow">
-                        <property name="visible">True</property>
                         <property name="width_request">180</property>
                         <property name="height_request">150</property>
+                        <property name="visible">True</property>
                         <property name="can_focus">True</property>
                         <property name="hexpand">True</property>
                         <property name="vexpand">True</property>
@@ -494,12 +494,12 @@
                           <object class="GtkTreeView" id="listbox-fields">
                             <property name="visible">True</property>
                             <property name="can_focus">True</property>
-                            <property name="reorderable">True</property>
                             <property name="hexpand">True</property>
                             <property name="vexpand">True</property>
                             <property name="model">liststore2</property>
                             <property name="headers_visible">False</property>
                             <property name="headers_clickable">False</property>
+                            <property name="reorderable">True</property>
                             <property name="search_column">0</property>
                             <property name="show_expanders">False</property>
                             <child internal-child="selection">
@@ -862,6 +862,7 @@
                                     <property name="visible">True</property>
                                     <property name="can_focus">True</property>
                                     <property name="hexpand">True</property>
+                                    <property name="activates_default">True</property>
                                   </object>
                                   <packing>
                                     <property name="left_attach">1</property>
