--- a/sw/uiconfig/swriter/ui/mmmailbody.ui
+++ b/sw/uiconfig/swriter/ui/mmmailbody.ui
@@ -183,6 +183,7 @@
                             <child internal-child="entry">
                               <object class="GtkEntry" id="comboboxtext-entry1">
                                 <property name="can_focus">True</property>
+                                <property name="activates_default">True</property>
                               </object>
                             </child>
                           </object>
@@ -352,6 +353,7 @@
                                         <child internal-child="entry">
                                           <object class="GtkEntry" id="comboboxtext-entry2">
                                             <property name="can_focus">True</property>
+                                            <property name="activates_default">True</property>
                                           </object>
                                         </child>
                                       </object>
