--- a/vcl/uiconfig/ui/printdialog.ui
+++ b/vcl/uiconfig/ui/printdialog.ui
@@ -614,6 +614,7 @@
                                                 <property name="visible">True</property>
                                                 <property name="can_focus">True</property>
                                                 <property name="hexpand">True</property>
+                                                <property name="activates_default">True</property>
                                                 <property name="placeholder_text" translatable="yes" context="printdialog|pagerange">e.g.: 1, 3-5, 7, 9</property>
                                               </object>
                                               <packing>
@@ -729,6 +730,7 @@
                                                 <property name="can_focus">True</property>
                                                 <property name="valign">center</property>
                                                 <property name="hexpand">True</property>
+                                                <property name="activates_default">True</property>
                                                 <property name="adjustment">adjustment2</property>
                                               </object>
                                               <packing>
@@ -1006,6 +1008,7 @@
                                             <child>
                                               <object class="GtkSpinButton" id="pagemarginsb:0mm">
                                                 <property name="can_focus">True</property>
+                                                <property name="activates_default">True</property>
                                               </object>
                                               <packing>
                                                 <property name="left_attach">1</property>
@@ -1028,6 +1031,7 @@
                                             <child>
                                               <object class="GtkSpinButton" id="sheetmarginsb:0mm">
                                                 <property name="can_focus">True</property>
+                                                <property name="activates_default">True</property>
                                               </object>
                                               <packing>
                                                 <property name="left_attach">1</property>
@@ -1077,6 +1081,7 @@
                                             <child>
                                               <object class="GtkSpinButton" id="pagerows">
                                                 <property name="can_focus">True</property>
+                                                <property name="activates_default">True</property>
                                               </object>
                                               <packing>
                                                 <property name="left_attach">1</property>
@@ -1086,6 +1091,7 @@
                                             <child>
                                               <object class="GtkSpinButton" id="pagecols">
                                                 <property name="can_focus">True</property>
+                                                <property name="activates_default">True</property>
                                               </object>
                                               <packing>
                                                 <property name="left_attach">3</property>
