tdf#127909 rename cert path dialogs' Add button
This dialog just allows to manually override the NSS path.
Currently it'll even lose this path, if the user select something
else during a LO run, which is a usability nuisance.

Change-Id: I75fadfbbd5006998a9f0e5cf70cb34566db701d8
Reviewed-on: https://gerrit.libreoffice.org/79975
Tested-by: Jenkins
Reviewed-by: Noel Grandin <noel.grandin@collabora.co.uk>

--- a/cui/uiconfig/ui/certdialog.ui
+++ b/cui/uiconfig/ui/certdialog.ui
@@ -40,7 +40,7 @@
             <property name="layout_style">end</property>
             <child>
               <object class="GtkButton" id="add">
-                <property name="label" translatable="yes" context="certdialog|add">_Add...</property>
+                <property name="label" translatable="yes" context="certdialog|add">_Select NSS path...</property>
                 <property name="visible">True</property>
                 <property name="can_focus">True</property>
                 <property name="can_default">True</property>
