--- a/formula/uiconfig/ui/formuladialog.ui
+++ b/formula/uiconfig/ui/formuladialog.ui
@@ -137,7 +137,7 @@
                 <property name="vexpand">True</property>
                 <property name="spacing">6</property>
                 <child>
-                  <object class="GtkNotebook" id="tabs">
+                  <object class="GtkNotebook" id="tabcontrol">
                     <property name="visible">True</property>
                     <property name="can_focus">True</property>
                     <property name="hexpand">True</property>
