xmloff: create XMLDrawSettingsExportOOO instances with an uno constructor
See tdf#74608 for motivation.

Change-Id: I15c879fd2be820a1b6ee878149442ebb46588a30
Reviewed-on: https://gerrit.libreoffice.org/80629
Tested-by: Jenkins
Reviewed-by: Miklos Vajna <vmiklos@collabora.com>

--- a/xmloff/util/xo.component
+++ b/xmloff/util/xo.component
@@ -77,7 +77,8 @@
   <implementation name="XMLDrawMetaExportOasis">
     <service name="com.sun.star.comp.Draw.XMLOasisMetaExporter"/>
   </implementation>
-  <implementation name="XMLDrawSettingsExportOOO">
+  <implementation name="XMLDrawSettingsExportOOO"
+    constructor="com_sun_star_comp_Draw_XMLSettingsExporter_get_implementation">
     <service name="com.sun.star.comp.Draw.XMLSettingsExporter"/>
   </implementation>
   <implementation name="XMLDrawSettingsExportOasis">
