Rename 'Single-page sheets' to 'Full-Sheet Previews' to avoid confusion
Because this option creates a pdf output which simply contains
full-sheet preview, disregarding most of the other options.

The created output is meant for preview, to see all content
of all shaeets at once, and not meant for usual printing.

Change-Id: I62936337e26f04878ecb7291335a5da952d8dced
Reviewed-on: https://gerrit.libreoffice.org/80636
Tested-by: Jenkins
Reviewed-by: Muhammet Kara <muhammet.kara@collabora.com>

--- a/filter/uiconfig/ui/pdfgeneralpage.ui
+++ b/filter/uiconfig/ui/pdfgeneralpage.ui
@@ -770,7 +770,7 @@
                 </child>
                 <child>
                   <object class="GtkCheckButton" id="singlepagesheets">
-                    <property name="label" translatable="yes" context="pdfgeneralpage|singlepagesheets">Single-page sheets</property>
+                    <property name="label" translatable="yes" context="pdfgeneralpage|singlepagesheets">Full-Sheet Previews</property>
                     <property name="visible">True</property>
                     <property name="can_focus">True</property>
                     <property name="receives_default">False</property>
