SvxFontPrevWindow is now unused
sc/uiconfig/scalc/ui/conditionalentrymobile.ui was already non-functional
before this change

Change-Id: I07743a8fcca4b3cf325ce3d3d0699bf68c0115f3
Reviewed-on: https://gerrit.libreoffice.org/80690
Tested-by: Jenkins
Reviewed-by: Caolán McNamara <caolanm@redhat.com>
Tested-by: Caolán McNamara <caolanm@redhat.com>

--- a/sc/uiconfig/scalc/ui/conditionalentrymobile.ui
+++ b/sc/uiconfig/scalc/ui/conditionalentrymobile.ui
@@ -92,7 +92,7 @@
           </packing>
         </child>
         <child>
-          <object class="svxlo-SvxFontPrevWindow" id="preview:border">
+          <object class="GtkDrawingArea" id="preview:border">
             <property name="can_focus">False</property>
             <property name="tooltip_text" translatable="yes" context="conditionalentrymobile|preview|tooltip_text">Example</property>
           </object>
