Resolves tdf#127994 - Totd dialog get resized horizontally
Width request set to 350

Change-Id: Ib974417282c76b4cede1b4773159b1fa748ddbfb
Reviewed-on: https://gerrit.libreoffice.org/80887
Tested-by: Jenkins
Reviewed-by: Heiko Tietze <heiko.tietze@documentfoundation.org>

--- a/cui/uiconfig/ui/tipofthedaydialog.ui
+++ b/cui/uiconfig/ui/tipofthedaydialog.ui
@@ -136,6 +136,7 @@
                 </child>
                 <child>
                   <object class="GtkLabel" id="lbText">
+                    <property name="width_request">350</property>
                     <property name="visible">True</property>
                     <property name="can_focus">False</property>
                     <property name="vexpand">True</property>
