--- a/sc/uiconfig/scalc/ui/dataproviderentry.ui
+++ b/sc/uiconfig/scalc/ui/dataproviderentry.ui
@@ -1,7 +1,12 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<!-- Generated with glade 3.20.0 -->
+<!-- Generated with glade 3.22.1 -->
 <interface domain="sc">
   <requires lib="gtk+" version="3.18"/>
+  <object class="GtkImage" id="image1">
+    <property name="visible">True</property>
+    <property name="can_focus">False</property>
+    <property name="icon_name">sc/res/xml_element.png</property>
+  </object>
   <object class="GtkGrid" id="grid">
     <property name="visible">True</property>
     <property name="can_focus">False</property>
@@ -10,7 +15,7 @@
     <property name="row_spacing">6</property>
     <property name="column_spacing">12</property>
     <child>
-      <object class="GtkComboBox" id="provider_lst">
+      <object class="GtkComboBoxText" id="provider_lst">
         <property name="visible">True</property>
         <property name="can_focus">False</property>
       </object>
@@ -73,7 +78,19 @@
       </packing>
     </child>
     <child>
-      <placeholder/>
+      <object class="GtkButton" id="apply">
+        <property name="visible">True</property>
+        <property name="can_focus">True</property>
+        <property name="receives_default">True</property>
+        <property name="tooltip_text" translatable="yes" context="dataproviderentry|apply">Apply Changes</property>
+        <property name="image">image1</property>
+        <property name="relief">none</property>
+        <property name="always_show_image">True</property>
+      </object>
+      <packing>
+        <property name="left_attach">4</property>
+        <property name="top_attach">1</property>
+      </packing>
     </child>
     <child>
       <placeholder/>
