--- a/sc/uiconfig/scalc/ui/sorttransformationentry.ui
+++ b/sc/uiconfig/scalc/ui/sorttransformationentry.ui
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<!-- Generated with glade 3.20.2 -->
+<!-- Generated with glade 3.22.1 -->
 <interface domain="sc">
   <requires lib="gtk+" version="3.18"/>
   <object class="GtkGrid" id="grid">
@@ -32,9 +32,11 @@
             <property name="can_focus">False</property>
             <child>
               <object class="GtkCheckButton" id="ed_ascending">
-                <property name="visible">True</property>
                 <property name="label" translatable="yes" context="sorttransformationentry|type">Ascending Order</property>
+                <property name="visible">True</property>
                 <property name="can_focus">True</property>
+                <property name="receives_default">False</property>
+                <property name="draw_indicator">False</property>
               </object>
               <packing>
                 <property name="left_attach">1</property>
@@ -68,6 +70,9 @@
                 <property name="top_attach">1</property>
               </packing>
             </child>
+            <child>
+              <placeholder/>
+            </child>
           </object>
           <packing>
             <property name="expand">False</property>
@@ -77,15 +82,27 @@
         </child>
         <child>
           <object class="GtkButton" id="ed_delete">
+            <property name="label" translatable="yes" context="sorttransformationentry|delete">Cancel</property>
             <property name="visible">True</property>
             <property name="can_focus">True</property>
-            <property name="label" translatable="yes" context="sorttransformationentry|delete">Cancel</property>
+            <property name="receives_default">False</property>
           </object>
           <packing>
-            <property name="left_attach">1</property>
-            <property name="top_attach">1</property>
+            <property name="expand">False</property>
+            <property name="fill">True</property>
+            <property name="position">2</property>
           </packing>
         </child>
+      </object>
+      <packing>
+        <property name="left_attach">0</property>
+        <property name="top_attach">1</property>
+      </packing>
+    </child>
+    <child>
+      <object class="GtkSeparator">
+        <property name="visible">True</property>
+        <property name="can_focus">False</property>
       </object>
       <packing>
         <property name="left_attach">0</property>
