--- a/xmloff/util/xo.component
+++ b/xmloff/util/xo.component
@@ -81,7 +81,8 @@
     constructor="com_sun_star_comp_Draw_XMLSettingsExporter_get_implementation">
     <service name="com.sun.star.comp.Draw.XMLSettingsExporter"/>
   </implementation>
-  <implementation name="XMLDrawSettingsExportOasis">
+  <implementation name="XMLDrawSettingsExportOasis"
+    constructor="com_sun_star_comp_Draw_XMLOasisSettingsExporter_get_implementation">
     <service name="com.sun.star.comp.Draw.XMLOasisSettingsExporter"/>
   </implementation>
   <implementation name="XMLDrawStylesExportOOO"
